3-sintatico/sintatico.automaton
State 0:
programa' -> . programa [ # ]
-- On WHILE shift to state 1
-- On RETURN shift to state 52
-- On PRINT shift to state 56
-- On INPUTS shift to state 59
-- On INPUTI shift to state 61
-- On INPUTF shift to state 63
-- On IF shift to state 65
-- On ID shift to state 70
-- On FOR shift to state 74
-- On DEF shift to state 126
-- On retorno shift to state 86
-- On programa shift to state 150
-- On print shift to state 87
-- On loopWhile shift to state 89
-- On loopFOR shift to state 90
-- On list(instrucao) shift to state 151
-- On leias shift to state 91
-- On leiai shift to state 93
-- On leiaf shift to state 95
-- On instrucao shift to state 153
-- On funcao shift to state 155
-- On condicaoIF shift to state 97
-- On comando shift to state 156
-- On chamadafuncao shift to state 102
-- On chamada shift to state 103
-- On atribuicao shift to state 105
-- On EOF reduce production list(instrucao) -> 

State 1:
loopWhile -> WHILE . exprLogicoAritmetica DPONTOS NOVALINHA INDENTA comandos DEDENTA [ WHILE RETURN PRINT INPUTS INPUTI INPUTF IF ID FOR EOF DEF DEDENTA ]
-- On NOT shift to state 2
-- On MENOS shift to state 3
-- On LITSTRING shift to state 4
-- On LITINT shift to state 5
-- On LITFLOAT shift to state 6
-- On LITBOOL shift to state 7
-- On ID shift to state 8
-- On APAR shift to state 10
-- On exprLogicoAritmetica shift to state 48
-- On chamada shift to state 14

State 2:
exprLogicoAritmetica -> NOT . exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
-- On NOT shift to state 2
-- On MENOS shift to state 3
-- On LITSTRING shift to state 4
-- On LITINT shift to state 5
-- On LITFLOAT shift to state 6
-- On LITBOOL shift to state 7
-- On ID shift to state 8
-- On APAR shift to state 10
-- On exprLogicoAritmetica shift to state 47
-- On chamada shift to state 14

State 3:
exprLogicoAritmetica -> MENOS . exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
-- On NOT shift to state 2
-- On MENOS shift to state 3
-- On LITSTRING shift to state 4
-- On LITINT shift to state 5
-- On LITFLOAT shift to state 6
-- On LITBOOL shift to state 7
-- On ID shift to state 8
-- On APAR shift to state 10
-- On exprLogicoAritmetica shift to state 46
-- On chamada shift to state 14

State 4:
exprLogicoAritmetica -> LITSTRING . [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
-- On VIRG reduce production exprLogicoAritmetica -> LITSTRING 
-- On VEZES reduce production exprLogicoAritmetica -> LITSTRING 
-- On OU reduce production exprLogicoAritmetica -> LITSTRING 
-- On NOVALINHA reduce production exprLogicoAritmetica -> LITSTRING 
-- On MODULO reduce production exprLogicoAritmetica -> LITSTRING 
-- On MENOS reduce production exprLogicoAritmetica -> LITSTRING 
-- On MENORIGUAL reduce production exprLogicoAritmetica -> LITSTRING 
-- On MENOR reduce production exprLogicoAritmetica -> LITSTRING 
-- On MAIS reduce production exprLogicoAritmetica -> LITSTRING 
-- On MAIORIGUAL reduce production exprLogicoAritmetica -> LITSTRING 
-- On MAIOR reduce production exprLogicoAritmetica -> LITSTRING 
-- On IN reduce production exprLogicoAritmetica -> LITSTRING 
-- On IGUALDADE reduce production exprLogicoAritmetica -> LITSTRING 
-- On FPAR reduce production exprLogicoAritmetica -> LITSTRING 
-- On E reduce production exprLogicoAritmetica -> LITSTRING 
-- On DPONTOS reduce production exprLogicoAritmetica -> LITSTRING 
-- On DIVIDIDO reduce production exprLogicoAritmetica -> LITSTRING 
-- On DIFERENTE reduce production exprLogicoAritmetica -> LITSTRING 

State 5:
exprLogicoAritmetica -> LITINT . [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
-- On VIRG reduce production exprLogicoAritmetica -> LITINT 
-- On VEZES reduce production exprLogicoAritmetica -> LITINT 
-- On OU reduce production exprLogicoAritmetica -> LITINT 
-- On NOVALINHA reduce production exprLogicoAritmetica -> LITINT 
-- On MODULO reduce production exprLogicoAritmetica -> LITINT 
-- On MENOS reduce production exprLogicoAritmetica -> LITINT 
-- On MENORIGUAL reduce production exprLogicoAritmetica -> LITINT 
-- On MENOR reduce production exprLogicoAritmetica -> LITINT 
-- On MAIS reduce production exprLogicoAritmetica -> LITINT 
-- On MAIORIGUAL reduce production exprLogicoAritmetica -> LITINT 
-- On MAIOR reduce production exprLogicoAritmetica -> LITINT 
-- On IN reduce production exprLogicoAritmetica -> LITINT 
-- On IGUALDADE reduce production exprLogicoAritmetica -> LITINT 
-- On FPAR reduce production exprLogicoAritmetica -> LITINT 
-- On E reduce production exprLogicoAritmetica -> LITINT 
-- On DPONTOS reduce production exprLogicoAritmetica -> LITINT 
-- On DIVIDIDO reduce production exprLogicoAritmetica -> LITINT 
-- On DIFERENTE reduce production exprLogicoAritmetica -> LITINT 

State 6:
exprLogicoAritmetica -> LITFLOAT . [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
-- On VIRG reduce production exprLogicoAritmetica -> LITFLOAT 
-- On VEZES reduce production exprLogicoAritmetica -> LITFLOAT 
-- On OU reduce production exprLogicoAritmetica -> LITFLOAT 
-- On NOVALINHA reduce production exprLogicoAritmetica -> LITFLOAT 
-- On MODULO reduce production exprLogicoAritmetica -> LITFLOAT 
-- On MENOS reduce production exprLogicoAritmetica -> LITFLOAT 
-- On MENORIGUAL reduce production exprLogicoAritmetica -> LITFLOAT 
-- On MENOR reduce production exprLogicoAritmetica -> LITFLOAT 
-- On MAIS reduce production exprLogicoAritmetica -> LITFLOAT 
-- On MAIORIGUAL reduce production exprLogicoAritmetica -> LITFLOAT 
-- On MAIOR reduce production exprLogicoAritmetica -> LITFLOAT 
-- On IN reduce production exprLogicoAritmetica -> LITFLOAT 
-- On IGUALDADE reduce production exprLogicoAritmetica -> LITFLOAT 
-- On FPAR reduce production exprLogicoAritmetica -> LITFLOAT 
-- On E reduce production exprLogicoAritmetica -> LITFLOAT 
-- On DPONTOS reduce production exprLogicoAritmetica -> LITFLOAT 
-- On DIVIDIDO reduce production exprLogicoAritmetica -> LITFLOAT 
-- On DIFERENTE reduce production exprLogicoAritmetica -> LITFLOAT 

State 7:
exprLogicoAritmetica -> LITBOOL . [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
-- On VIRG reduce production exprLogicoAritmetica -> LITBOOL 
-- On VEZES reduce production exprLogicoAritmetica -> LITBOOL 
-- On OU reduce production exprLogicoAritmetica -> LITBOOL 
-- On NOVALINHA reduce production exprLogicoAritmetica -> LITBOOL 
-- On MODULO reduce production exprLogicoAritmetica -> LITBOOL 
-- On MENOS reduce production exprLogicoAritmetica -> LITBOOL 
-- On MENORIGUAL reduce production exprLogicoAritmetica -> LITBOOL 
-- On MENOR reduce production exprLogicoAritmetica -> LITBOOL 
-- On MAIS reduce production exprLogicoAritmetica -> LITBOOL 
-- On MAIORIGUAL reduce production exprLogicoAritmetica -> LITBOOL 
-- On MAIOR reduce production exprLogicoAritmetica -> LITBOOL 
-- On IN reduce production exprLogicoAritmetica -> LITBOOL 
-- On IGUALDADE reduce production exprLogicoAritmetica -> LITBOOL 
-- On FPAR reduce production exprLogicoAritmetica -> LITBOOL 
-- On E reduce production exprLogicoAritmetica -> LITBOOL 
-- On DPONTOS reduce production exprLogicoAritmetica -> LITBOOL 
-- On DIVIDIDO reduce production exprLogicoAritmetica -> LITBOOL 
-- On DIFERENTE reduce production exprLogicoAritmetica -> LITBOOL 

State 8:
chamada -> ID . APAR loption(separated_nonempty_list(VIRG,exprLogicoAritmetica)) FPAR [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> ID . [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
-- On APAR shift to state 9
-- On VIRG reduce production exprLogicoAritmetica -> ID 
-- On VEZES reduce production exprLogicoAritmetica -> ID 
-- On OU reduce production exprLogicoAritmetica -> ID 
-- On NOVALINHA reduce production exprLogicoAritmetica -> ID 
-- On MODULO reduce production exprLogicoAritmetica -> ID 
-- On MENOS reduce production exprLogicoAritmetica -> ID 
-- On MENORIGUAL reduce production exprLogicoAritmetica -> ID 
-- On MENOR reduce production exprLogicoAritmetica -> ID 
-- On MAIS reduce production exprLogicoAritmetica -> ID 
-- On MAIORIGUAL reduce production exprLogicoAritmetica -> ID 
-- On MAIOR reduce production exprLogicoAritmetica -> ID 
-- On IN reduce production exprLogicoAritmetica -> ID 
-- On IGUALDADE reduce production exprLogicoAritmetica -> ID 
-- On FPAR reduce production exprLogicoAritmetica -> ID 
-- On E reduce production exprLogicoAritmetica -> ID 
-- On DPONTOS reduce production exprLogicoAritmetica -> ID 
-- On DIVIDIDO reduce production exprLogicoAritmetica -> ID 
-- On DIFERENTE reduce production exprLogicoAritmetica -> ID 

State 9:
chamada -> ID APAR . loption(separated_nonempty_list(VIRG,exprLogicoAritmetica)) FPAR [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
-- On NOT shift to state 2
-- On MENOS shift to state 3
-- On LITSTRING shift to state 4
-- On LITINT shift to state 5
-- On LITFLOAT shift to state 6
-- On LITBOOL shift to state 7
-- On ID shift to state 8
-- On APAR shift to state 10
-- On separated_nonempty_list(VIRG,exprLogicoAritmetica) shift to state 40
-- On loption(separated_nonempty_list(VIRG,exprLogicoAritmetica)) shift to state 41
-- On exprLogicoAritmetica shift to state 43
-- On chamada shift to state 14
-- On FPAR reduce production loption(separated_nonempty_list(VIRG,exprLogicoAritmetica)) -> 

State 10:
exprLogicoAritmetica -> APAR . exprLogicoAritmetica FPAR [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
-- On NOT shift to state 2
-- On MENOS shift to state 3
-- On LITSTRING shift to state 4
-- On LITINT shift to state 5
-- On LITFLOAT shift to state 6
-- On LITBOOL shift to state 7
-- On ID shift to state 8
-- On APAR shift to state 10
-- On exprLogicoAritmetica shift to state 11
-- On chamada shift to state 14

State 11:
exprLogicoAritmetica -> exprLogicoAritmetica . MAIS exprLogicoAritmetica [ VEZES OU MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUALDADE FPAR E DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . MENOS exprLogicoAritmetica [ VEZES OU MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUALDADE FPAR E DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . VEZES exprLogicoAritmetica [ VEZES OU MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUALDADE FPAR E DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . DIVIDIDO exprLogicoAritmetica [ VEZES OU MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUALDADE FPAR E DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . MODULO exprLogicoAritmetica [ VEZES OU MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUALDADE FPAR E DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . IGUALDADE exprLogicoAritmetica [ VEZES OU MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUALDADE FPAR E DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . MAIOR exprLogicoAritmetica [ VEZES OU MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUALDADE FPAR E DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . MAIORIGUAL exprLogicoAritmetica [ VEZES OU MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUALDADE FPAR E DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . MENOR exprLogicoAritmetica [ VEZES OU MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUALDADE FPAR E DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . MENORIGUAL exprLogicoAritmetica [ VEZES OU MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUALDADE FPAR E DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . DIFERENTE exprLogicoAritmetica [ VEZES OU MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUALDADE FPAR E DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . E exprLogicoAritmetica [ VEZES OU MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUALDADE FPAR E DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . OU exprLogicoAritmetica [ VEZES OU MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUALDADE FPAR E DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> APAR exprLogicoAritmetica . FPAR [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
-- On VEZES shift to state 12
-- On OU shift to state 15
-- On MODULO shift to state 17
-- On MENOS shift to state 19
-- On MENORIGUAL shift to state 23
-- On MENOR shift to state 27
-- On MAIS shift to state 25
-- On MAIORIGUAL shift to state 29
-- On MAIOR shift to state 31
-- On IGUALDADE shift to state 33
-- On FPAR shift to state 39
-- On E shift to state 35
-- On DIVIDIDO shift to state 21
-- On DIFERENTE shift to state 37

State 12:
exprLogicoAritmetica -> exprLogicoAritmetica VEZES . exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
-- On NOT shift to state 2
-- On MENOS shift to state 3
-- On LITSTRING shift to state 4
-- On LITINT shift to state 5
-- On LITFLOAT shift to state 6
-- On LITBOOL shift to state 7
-- On ID shift to state 8
-- On APAR shift to state 10
-- On exprLogicoAritmetica shift to state 13
-- On chamada shift to state 14

State 13:
exprLogicoAritmetica -> exprLogicoAritmetica . MAIS exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . MENOS exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . VEZES exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica . [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . DIVIDIDO exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . MODULO exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . IGUALDADE exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . MAIOR exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . MAIORIGUAL exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . MENOR exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . MENORIGUAL exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . DIFERENTE exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . E exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
exprLogicoAritmetica -> exprLogicoAritmetica . OU exprLogicoAritmetica [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
-- On VIRG reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On VEZES reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On OU reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On NOVALINHA reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On MODULO reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On MENOS reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On MENORIGUAL reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On MENOR reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On MAIS reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On MAIORIGUAL reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On MAIOR reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On IN reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On IGUALDADE reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On FPAR reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On E reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On DPONTOS reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On DIVIDIDO reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 
-- On DIFERENTE reduce production exprLogicoAritmetica -> exprLogicoAritmetica VEZES exprLogicoAritmetica 

State 14:
exprLogicoAritmetica -> chamada . [ VIRG VEZES OU NOVALINHA MODULO MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IN IGUALDADE FPAR E DPONTOS DIVIDIDO DIFERENTE ]
-- On VIRG reduce production exprLogicoAritmetica -> chamada 
-- On VEZES reduce production exprLogicoAritmetica -> chamada 
-- On OU reduce production exprLogicoAritmetica -> chamada 
-- On NOVALINHA reduce production exprLogicoAritmetica -> chamada 
-- On MODULO reduce production exprLogicoAritmetica -> chamada 
-- On MENOS reduce production exprLogicoAritmetica -> chamada 
-- On MENORIGUAL reduce production exprLogicoAritmetica -> chamada 
-- On MENOR reduce production exprLogicoAritmetica -> chamada 
-- On MAIS reduce production exprLogicoAritmetica -> chamada 
-- On MAIORIGUAL reduce production exprLogicoAritmetica -> chamada 
-- On MAIOR reduce production exprLogicoAritmetica -> chamada 
-- On IN reduce production exprLogicoAritmetica -> chamada 
-- On IGUALDADE reduce production exprLogicoAritmetica -> chamada 
-- On FPAR reduce production exprLogicoAritmetica -> chamada 
-- On E reduce production exprLogicoAritmetica -> chamada 
-- On DPONTOS reduce production exprLogicoAritmetica -> chamada 
-- On DIVIDIDO reduce production exprLogicoAritmetica -> chamada 
-- On DIFERENTE reduce production exprLogicoAritmetica -> chamada 
